<resources>
    <string name="app_name">Bucket List TMS</string>
    <string name="activity_auth">Аутеризация</string>
    <string name="title_chats">Чат</string>
    <string name="title_profile">Профиль</string>
    <string name="title_targets">Цели</string>
    <string name="go_back">Назад</string>
    <string name="selection_state">Selected: %1$d out of %2$d</string>
    <string name="select_all">Select All</string>
    <string name="clear_all">Clear All</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_target">TargetActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_target">Цель</string>
    <string name="title_create_target">Создать Цель</string>
    <string name="title_activity_main_v2">Bucket List TMS</string>
</resources>