<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_targets">

    <fragment
        android:id="@+id/navigation_targets"
        android:name="com.tms.bucketlist.ui.targets.TargetsFragment"
        android:label="@string/title_targets"
        tools:layout="@layout/fragment_targets" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.tms.bucketlist.ui.chats.ChatsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tms.bucketlist.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>